@@ -1,5 +1,16 @@
 Summary of important user-visible changes for releases of the geometry package
 ===============================================================================
+geometry-1.7.1   Release Date: yyyy-mm-dd  Release Manager: Juan Pablo Carbajal
+===============================================================================
+
+** Added Functions
+
+   planePoint
+
+** Bug Fixes:
+  - polynomialCurveSetFit had debug entries, now removed.
+
+===============================================================================
 geometry-1.7.0   Release Date: 2013-04-07  Release Manager: Juan Pablo Carbajal
 ===============================================================================
 
